fix: parent container position and its z-index

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -15,6 +15,7 @@
 
 body {
   color: rgb(228, 228, 230);
+  overflow-x: hidden;
 }
 
 /*desktop nav styling*/
@@ -28,6 +29,7 @@ body {
   border-right: 2px solid rgb(28, 28, 33);
   border-radius: 1em 1em 0 0;
   overflow: hidden;
+  z-index: 999;
 }
 
 .hero {
@@ -113,6 +115,8 @@ body {
 
 .socials {
   display: flex !important;
+  width: 40%;
+  padding: .5em;
 }
 
 @media screen and (min-width: 640px) and (max-width: 1014px) {
@@ -176,12 +180,13 @@ body {
   .header-nav {
     clip-path: circle(0% at 90% 10%);
     background-color: rgb(228, 228, 230);
-    position: fixed;
-    bottom: 0;
+    position: absolute;
+    bottom: -37rem;
     top: 0;
     left: 0;
     width: 100vw;
-    z-index: 99;
+    height: 100vh;
+    z-index: 999;
     transition: clip-path 1s ease-in-out;
     border-radius: 0;
     overflow: hidden;
@@ -189,6 +194,7 @@ body {
 
   .responsive_nav {
     clip-path: circle(75%);
+  
   }
 }
 
